...
                            <constraint firstItem="3Y8-De-AXm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TvF-m5-cxT"/>
                            <constraint firstItem="3Y8-De-AXm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="s9o-5O-76R"/>
                            <constraint firstItem="3Y8-De-AXm" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="tvz-TF-KJP"/>
                            <constraint firstItem="3Y8-De-AXm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zVB-GW-iBb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Due Not Forget" id="fY8-dr-Nab">
                        <barButtonItem key="backBarButtonItem" title="Back" id="sYw-Qu-sKD"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Q3u-51-yjo">
                            <connections>
                                <segue destination="iMD-Bj-gUg" kind="presentation" id="34y-oD-5un"/>
                            </connections>
                        </barButtonItem>
...
                    <view key="view" contentMode="scaleToFill" id="sS6-9K-FBi">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZm-B9-7ZE">
                                <rect key="frame" x="153.66666666666666" y="427" width="68" height="30"/>
                                <state key="normal" title="Save Item"/>
                                <connections>
                                    <segue destination="khH-7L-vS2" kind="unwind" unwindAction="unwindToItemListWithSender:" id="OMN-BG-jIa"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter what you want to recall" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H49-f7-LsF">
                                <rect key="frame" x="16" y="76" width="343" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="C9A-XV-kcR">
                                <rect key="frame" x="153" y="125" width="69" height="32"/>
...
